--- a/templates/base.html
+++ b/templates/base.html
@@ -16,11 +16,11 @@
                 <li><a href="/articles/all">Articles</a></li>
                 <li><a href="/admin">Admin</a></li>
             </ul>
-            {% endblock %}
+            {% endblock sidebar %}
         </div>
             
         <div id="content">
-            {% block content %}This is the content area{% endblock %}
+            {% block content %}This is the content area{% endblock content %}
         </div>    
     </div>
     <div>
